--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,3 +6,15 @@
   display: flex;
   flex-direction: column;
 }
+
+.generic-btn {
+    background-color: var(--button-color);
+    padding: 0.25rem 1rem;
+    border-radius: 5px;
+    border: none;
+    font-size: 1.05rem;
+    cursor: pointer;
+}
+.generic-btn:hover {
+    background-color: var(--hover-color);
+}
