--- a/frontend/src/styles/ArticleStyles.css
+++ b/frontend/src/styles/ArticleStyles.css
@@ -18,13 +18,12 @@
 }
 
 .article-delete-btn {
-    width: 1.75rem;
     height: 1.75rem;
     color: white;
     font-weight: bolder;
     background-color: rgb(255, 0, 0);
     border: solid 2px red;
-    border-radius: 25%;
+    border-radius: 5px;
     cursor: pointer;
     margin-left: 1rem;
 }
